[package]
name = "rust-ytd"
version = "0.2.0"
authors = ["Nils Pukropp <nils.pukropp@outlook.de>", "Christian Llpo <jebediah47@protonmail.com>"]
edition = "2018"
license = "MIT"
license-file = "LICENSE"
description = "A simple wrapper for yt-dlp."
homepage = "https://github.com/jebediah47/rust-ytd"
repository = "https://github.com/jebediah47/rust-ytd"
readme = "README.md"

[dependencies]
regex = "1.10.4"
thiserror = "1.0.60"
toml = "0.8.12"
